--- a/index.html
+++ b/index.html
@@ -1,13 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
-    <link rel="stylesheet" href="style.css">
+    <title>terminal</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/bootstrap-5.2.0-dist/css/bootstrap.css">
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Halo Github</h1>
+    <div id="canvasutama">
+        <div id="navbar">
+            <div id="logo"></div>
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Home <img src="image/home.png"width="20px" height="20px" style="margin-bottom: 10px;"></a></li>
+                    <li><a href="#">menu<img src="image/down-arrow.png" width="20px" height="30px"></a>
+                        <ul class="dropdown">
+                            <div>
+                                <li><a href="caramengurusanak.html">Cara Merawat Anak</a></li>
+                                <li><a href="rsterdekat.html">Rumah Sakit Terdekat</a></li>
+                            </div>
+                        </ul>
+                    </li>
+                    <li><a href="#">Tentang Kami <img src="image/information-button.png" width="20px" height="20px" style="margin-bottom: 10px;"></a></li>
+                </ul>
+                <div>
+                    <h1>Childern Care</h1>
+                </div>
+
+            </nav>
+        </div>
+        <div class="header">
+            <h1>H G F K<br>(Health Giver For Kids)</h1>
+        </div>
+        <div id="content">
+            <div>
+                <div>
+                    <h1></h1>
+                    <p>Sesuai website <a href="https://ourworldindata.org/child-mortality">https://ourworldindata.org/child-mortality</a> kita dapat melihat bahwa Indonesia tidak luput dari yang namanya kematian. Akan tetapi dari data yang ditampilkan dibawah ini:</p>
+                </div>
+                <div class="imgone">
+                    <img src="image/imorlitas anak.png" alt="child mortality rate 2020 : https://ourworldindata.org/grapher/child-mortality-igme">
+                    <a href="https://ourworldindata.org/grapher/child-mortality-igme" target="_blank"><p style="text-decoration: underline;">Sumber: https://ourworldindata.org/grapher/child-mortality-igme</p></a>
+                </div>
+                <div>
+                    <p>Dapat dilihat bahwa Indonesia 2% dari anak bayi Indonesia yang belum beranjak umur 5 tahun, meninggal dunia dari tenggang waktu 2019-2020. Ini adalah masalah yang serius, karena ini menunjukan ketidak tanggung jawaban pemerintahan Indonesia dengan kasus ini. Bukan hanya itu saja, ini menunjukan bahwa Indonesia adalah negara yang tidak dapat menjaga calon penerus bangsa dengan baik. </p>
+                </div>
+                <div>
+                    <h1></h1>
+                    <p>Maka dari itu kami tim web design TepThree membuat web khusus untuk membantu warga Indonesia mengatasi masalah ini, Kami dari tim TepThree membuat website untuk membantu para orang tua/parents baru maupun tidak. Objektif dari web ini adalah untuk membantu para orang tua agar lebih mudah mengatasi masalah contoh: Rumah sakit terdekat, tips merawat buah hati, dls. </p>
+                </div>
+            </div>
+        </div>
+        <div id="info"> 
+            <div class="sosmed">
+                <a href="http://www.smkn8semarang.sch.id/" target="_blank"><img class="spanduksnapan" src="http://www.smkn8semarang.sch.id/templates/smk8semarang/upload/image/banner1.jpg" alt="link smk 8 semarang"></a>
+                <a href="https://www.instagram.com/smkn8semarang/" target="_blank"><img class="logosnapan" src="image/instagram.png" width="50px"></a>
+                <a href="https://www.youtube.com/channel/UCKDqkMmi0WzA_0Iol7v1tIQ" target="_blank"><img class="logosnapan" src="image/youtube.png" width="50px"></a>
+                <a href="https://web.facebook.com/smkn8semarang?_rdc=1&_rdr" target="_blank"><img class="logosnapan" src="image/facebook.png" width="50px"></a>
+                <a href="https://twitter.com/smk8semarang" target="_blank"><img class="logosnapan" src="image/twitter.png" width="50px"></a>
+                <a href="http://www.smkn8semarang.sch.id/" target="_blank"><img class="logosnapan" src="image/logo smk 8 semarang.png" width="150px"></a>
+
+            </div>
+        </div>
+    </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
