--- a/caramengurusanak.html
+++ b/caramengurusanak.html
@@ -19,7 +19,7 @@
             <div id="logo"></div>
             <nav class="menu">
                 <ul>
-                    <li><a href="index.html">Home <img src="image/home.png"width="20px" height="20px" style="margin-bottom: 10px;"></a></li>
+                    <li><a href="index.html">Home <img src="image/home.png"width="20px" height="20px"></a></li>
                     <li><a href="#">menu<img src="image/down-arrow.png" width="20px" height="30px"></a>
                         <ul class="dropdown">
                             <div>
@@ -28,7 +28,7 @@
                             </div>
                         </ul>
                     </li>
-                    <li><a href="#">Tentang Kami <img src="image/information-button.png" width="20px" height="20px" style="margin-bottom: 10px;"></a></li>
+                    <li><a href="#">Tentang Kami <img src="image/information-button.png" width="20px" height="20px"></a></li>
                 </ul>
                 <div>
                     <h1>Childern Care</h1>
@@ -73,63 +73,20 @@
                         <h1 style="text-align: right; margin-right:110px;">2. Tutorial/Tips Memandikan Balita</h1>
                         <p  style="text-align: right; display: block;"></p>
                         <ol class="list-right">
-                            <li>Permukaan yang datar dan aman, seperti tempat tidur atau meja tempat ganti pakaian bayi</li>
-                            <li>Handuk dan alas ganti</li>
-                            <li>Air untuk memandikan bayi dan pastikan air yang digunakan tidak terlalu panas atau dingin</li>
-                            <li>Gayung untuk mengalirkan air</li>
-                            <li>Kain berbahan lembut untuk menyeka tubuh bayi</li>
-                            <li>Pakaian dan popok pengganti</li>
+                            <li>Isi bak mandi bayi dengan air hangat bersuhu sekitar 32o Celcius dan ketinggian air sekitar 7 cm.</li>
+                            <li>Baringkan bayi di alas ganti atau handuk, buka pakaian bayi secara perlahan.</li>
+                            <li>Gunakan satu tangan dan lengan Anda untuk menopang kepala dan tubuh bayi, sedangkan tangan yang lain untuk menyangga tubuh bayi bagian bawah.</li>
+                            <li>Letakkan bayi ke dalam bak mandi secara perlahan, dimulai dengan kaki. Pastikan satu tangan tetap menyangga punggung dan kepala bayi, sementara tangan Anda yang lain membersihkan bagian tubuh bayi.</li>
+                            <li>Jaga posisi kepala bayi agar selalu berada di atas permukaan air.</li>
+                            <li>Bersihkan bayi dimulai dari kelopak matanya dengan kapas atau kain katun lembut yang dicelupkan ke dalam air hangat. Gunakan kain yang berbeda untuk setiap mata.</li>
+                            <li>Lanjutkan dengan membersihkan hidung, telinga, dan wajah bayi.</li>
+                            <li>Jika menggunakan sabun, tuang sedikit saja atau oleskan tipis di kulit Anda sebelum mengusapnya di kulit bayi.</li>
+                            <li>Usap secara perlahan dan lembut ketika membersihkan bagian ketiak, belakang telinga, leher dan kelamin bayi.</li>
+                            <li>Guyur kepala dan seluruh tubuh bayi secara perlahan dengan gayung, kemudian seka dengan kain atau waslap bersih.</li>
+                            <li>Jika sudah selesai, angkat bayi secara perlahan dari bak mandi.</li>
+                            <li>Segera letakkan bayi di atas tempat tidur yang sudah diberi alas handuk.</li>
+                            <li>Keringkan setiap bagian tubuh bayi secara perlahan-lahan dengan handuk berbahan lembut.</li>
                         </ol>
-                        <video controls class="videoincard">
-                            <source src="movie.mp4" type="video/mp4">
-                            <source src="movie.ogg" type="video/ogg">
-                          perangkatmu tidak memadahi
-                        </video>
-                        <button><a href="#" style="text-decoration: none; color:rgb(0, 0, 0);">baca selengkapnya</a></button>
-                    </div>
-                    <div class="card-left">
-                        <h1 style="text-align: left;">3</h1>
-                        <p  style="text-align: left; display: block;">bla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla bla</p>
-                        <video controls class="videoincard">
-                            <source src="movie.mp4" type="video/mp4">
-                            <source src="movie.ogg" type="video/ogg">
-                          perangkatmu tidak memadahi
-                        </video>
-                        <button><a href="#" style="text-decoration: none; color:rgb(0, 0, 0);">baca selengkapnya</a></button>
-                    </div>
-                    <div class="card-right">
-                        <h1 style="text-align: right; margin-right:110px;">4</h1>
-                        <p  style="text-align: right; display: block;">bla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla bla</p>
-                        <video controls class="videoincard">
-                            <source src="movie.mp4" type="video/mp4">
-                            <source src="movie.ogg" type="video/ogg">
-                          perangkatmu tidak memadahi
-                        </video>
-                        <button><a href="#" style="text-decoration: none; color:rgb(0, 0, 0);">baca selengkapnya</a></button>
-                    </div>
-                    <div class="card-left">
-                        <h1 style="text-align: left;">5</h1>
-                        <p  style="text-align: left; display: block;">bla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla bla</p>
-                        <video controls class="videoincard">
-                            <source src="movie.mp4" type="video/mp4">
-                            <source src="movie.ogg" type="video/ogg">
-                          perangkatmu tidak memadahi
-                        </video>
-                        <button><a href="#" style="text-decoration: none; color:rgb(0, 0, 0);">baca selengkapnya</a></button>
-                    </div>
-                    <div class="card-right">
-                        <h1 style="text-align: right; margin-right:110px;">6</h1>
-                        <p  style="text-align: right; display: block;">bla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla bla</p>
-                        <video controls class="videoincard">
-                            <source src="movie.mp4" type="video/mp4">
-                            <source src="movie.ogg" type="video/ogg">
-                          perangkatmu tidak memadahi
-                        </video>
-                        <button><a href="#" style="text-decoration: none; color:rgb(0, 0, 0);">baca selengkapnya</a></button>
-                    </div>
-                    <div class="card-left">
-                        <h1 style="text-align: left;">7</h1>
-                        <p  style="text-align: left; display: block;">bla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla blabla bla bla bla</p>
                         <video controls class="videoincard">
                             <source src="movie.mp4" type="video/mp4">
                             <source src="movie.ogg" type="video/ogg">
