--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div id="logo"></div>
             <nav class="menu">
                 <ul>
-                    <li><a href="index.html">Home <img src="image/home.png"width="20px" height="20px" style="margin-bottom: 10px;"></a></li>
+                    <li><a href="index.html">Home <img src="image/home.png"width="20px" height="20px"></a></li>
                     <li><a href="#">menu<img src="image/down-arrow.png" width="20px" height="30px"></a>
                         <ul class="dropdown">
                             <div>
@@ -28,16 +28,16 @@
                             </div>
                         </ul>
                     </li>
-                    <li><a href="#">Tentang Kami <img src="image/information-button.png" width="20px" height="20px" style="margin-bottom: 10px;"></a></li>
+                    <li><a href="#">Tentang Kami <img src="image/information-button.png" width="20px" height="20px"></a></li>
                 </ul>
                 <div>
-                    <h1>Childern Care</h1>
+                    <h1>Children Care</h1>
                 </div>
 
             </nav>
         </div>
         <div class="header">
-            <h1>H G F K<br>(Health Giver For Kids)</h1>
+            <h1>C C<br>(Children Care)</h1>
         </div>
         <div id="content">
             <div>
