--- a/caramengurusanak.html
+++ b/caramengurusanak.html
@@ -41,7 +41,7 @@
         </div>
         <div id="content">
             <div>
-                <div>
+                <div class="pemaparan">
                     <h1>Mengurus Anak</h1>
                     <p>Menikah di usia muda lalu memiliki anak tidak lagi menjadi hal yang aneh. Bagi wanita yang memutuskan untuk menjadi ibu muda, dalam keadaan tersebut kesiapan fisik dan mental sangatlah penting. Karena tidak dapat dipungkiri bahwa mengurus anak adalah pekerjaan yang cukup melelahkan dan dapat memicu stres. Oleh karena itu, selain butuh kerjasama yang baik dengan sang ayah, ibu juga butuh tips untuk membantu memenuhi kebutuhan buah hatinya. <br><br> Selain karena merupakan hal yang baru, dan belum memiliki pengalaman sebelumnya, melakukan pekerjaan sebagai ibu "full time" bisa sangat melelahkan. Banyaknya pekerjaan rumah tangga yang harus diselesaikan adalah salah satu hal yang melelahkan. Ditambah dengan mengurus anak yang rewel, pekerjaan di rumah akan semakin terasa berat. Nah, ibu muda sebaiknya tahu apa yang dibutuhkan si buah hati. Lalu apa saja tips untuk membantu ibu muda dalam memenuhi kebutuhan sang buah hati?</p>
                 </div>
