--- a/rsterdekat.html
+++ b/rsterdekat.html
@@ -44,7 +44,7 @@
                 <div>
                     <p>Karena mungkin banyak yang tidak tahu dimana saja rumah sakit yang ada. Jadi di sini akan membri tahu dimana saja letak rumah sakit yang ada di Jawa Tengah.</p>
                     <div>
-                        <h2>Semarang</h2>
+                        <h2 class="titlein">Semarang</h2>
                         <div class="cardrs">
                             <div class="one">
                                 <a href="https://www.sehatq.com/faskes/rumah-sakit-dr-kariadi"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Rs.Karyadi.JPG/400px-Rs.Karyadi.JPG" alt="RS Kariadi"></a>
