--- a/rsterdekat.html
+++ b/rsterdekat.html
@@ -31,7 +31,7 @@
                     <li><a href="#">Tentang Kami <img src="image/information-button.png" width="20px" height="20px"></a></li>
                 </ul>
                 <div>
-                    <h1>Childern Care</h1>
+                    <h1>Children Care</h1>
                 </div>
 
             </nav>
